# TradingPF

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  web_app.py
backtest/: walk_forward.py
config/: default.yaml  free.yaml
core/: base.py  config.py  exceptions.py  logging_utils.py  models.py  orchestrator.py  runtime_state.py
darkpool/: analytics.py
dashboard/: reporting.py
data/: feature_store.py  ingestion.py  providers.py  schemas.py
execution/: broker.py  policy.py
geo/: anomaly.py
liquidity/: microstructure.py
macro/: cross_asset.py  intelligence.py
ml/: multi_timeframe.py  probability.py  retrainer.py
news/: catalyst.py  embeddings.py  headline_brief.py
options/: flow.py
pairs/: stat_arb.py
risk/: command_center.py  portfolio.py
rl/: allocation.py
technical/: engine.py  premarket_scanner.py
templates/: dashboard.html
tests/: test_pipeline.py  test_web.py
volatility/: arbitrage.py
